@@ -12,9 +12,6 @@
 		<version>0-SNAPSHOT</version>
 	</parent>
 
-	<build>
-		<defaultGoal>package</defaultGoal>
-	</build>
 	<dependencies>
 		<dependency>
 			<groupId>de.uniwue.d3web</groupId>
