@@ -1,3 +1,23 @@
+/*
+ * Copyright (C) 2009 Chair of Artificial Intelligence and Applied Informatics
+ *                    Computer Science VI, University of Wuerzburg
+ *
+ * This is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation; either version 3 of
+ * the License, or (at your option) any later version.
+ *
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software; if not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */
+
 package de.d3web.persistence.multimedia;
 
 import java.io.File;
@@ -6,8 +26,8 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.LinkedList;
 import java.util.logging.Logger;
 
 import org.w3c.dom.Document;
@@ -36,11 +56,24 @@ public class MMExtensionsPersistenceHandler implements
 
 	private void loadFiles(URL url) throws URISyntaxException {
 		File path = new File(url.toURI().resolve(""));
-		if(path == null) return;
-		File[] fileArray = path.listFiles();
-		if(fileArray == null) return;
-		Collection<File> files = Arrays.asList(fileArray);
+		Collection<File> files = new LinkedList<File>();
+		collectFiles(path, files);
+		//MMExtensionsDataManager.getInstance().addFiles(files);
 		new UploadAction(files, false).actionPerformed(null);
+	}
+	
+
+	private void collectFiles(File path, Collection<File> result) {
+		File[] files = path.listFiles();
+		if (files == null) return;
+		for (File file : files) {
+			if (file.isDirectory()) {
+				collectFiles(file, result); 
+			}
+			else {
+				result.add(file);
+			}
+		}
 	}
 
 	public String getId() {
@@ -50,7 +83,6 @@ public class MMExtensionsPersistenceHandler implements
 	public String getDefaultStorageLocation() {
 		return dir;
 	}
-
 	
 	public Collection<PersistentObjectDescriptor> saveAll(KnowledgeBase kb) {
 		Collection<PersistentObjectDescriptor> result = new ArrayList<PersistentObjectDescriptor>();
